# Package description

[tool.poetry]
name = "gimie"
version = "0.4.0"
description = "Extract structured metadata from git repositories."
authors = ["Swiss Data Science Center <contact@datascience.ch>"]
license = "Apache-2.0"
homepage = "https://github.com/SDSC-ORD/gimie"
keywords = ["metadata", "git", "extraction", "linked-data"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# Dependency management

[tool.poetry.dependencies]
python = "^3.8"
PyDriller = "^2.3"
pyshacl = "^0.20.0"
# temporarily disabled due to installation problems
# scancode-toolkit = "^31.2.4"
typer = "^0.7.0"
calamus = "^0.4.2"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
pre-commit = "^3.0.0"
importlib = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"


[tool.poetry.group.doc.dependencies]
sphinx = "<7.0.0"
sphinx-click = "^4.4.0"
sphinxawesome-theme = "^4.1.0"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.4.1"
myst-parser = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gimie = 'gimie.cli:app'


# Tooling configuration

[tool.black]
line-length = 79
target-version = ["py38", "py39"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["gimie", "tests"]

[tool.pyright]
reportMissingTypeStubs = false
reportUntypedBaseClass = false

[tool.git-cliff.changelog]
header = "Notable changes introduced in gimie releases are documented in this file\n\n"
body = """
# Changelog

{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits
    | filter(attribute="scope")
    | sort(attribute="scope") %}
        - *({{commit.scope}})* {{ commit.message | upper_first }}
        {%- if commit.breaking %}
        {% raw %}  {% endraw %}- **BREAKING**: {{commit.breaking_description}}
        {%- endif -%}
    {%- endfor -%}
    {%- for commit in commits %}
        {%- if commit.scope -%}
        {% else -%}
            - {{ commit.message | upper_first }}
            {% if commit.breaking -%}
            {% raw %}  {% endraw %}- **BREAKING**: {{commit.breaking_description}}
            {% endif -%}
        {% endif -%}
    {% endfor -%}
    {% raw %}\n{% endraw %}\
{% endfor %}\n
"""
footer = "<!--generated by git-cliff -->"

[tool.git-cliff.git]
conventional_commits = true
filter_commits = true
commit_parsers = [
    {message = "^feat", group = "Features"},
    {message = "^fix", group = "Bug Fixes"},
    {message = "^doc", group = "Documentation"},
]

commit_preprocessors = [
    {pattern = 'Merged PR #[0-9]: (.*)', replace = "$1"},
    {pattern = " +", replace = " "},
]
